@@ -1,3 +1,9 @@
+2012-11-06  Ed Schonberg  <schonberg@adacore.com>
+
+	* sem_res.adb (Preanalyze_And_Resolve): In Alfa mode do not
+	disable checks, so that flags can be properly set on expressions
+	that are not further expanded.
+
 2012-11-06  Robert Dewar  <dewar@adacore.com>
 
 	* exp_attr.adb, sem_attr.adb: Minor reformatting.
